force-app/main/default/objects/leankor__Security__c/leankor__Security__c.object-meta.xml
<CustomObject>
    <description>Each board (ValueStream) has the ability to store role based security settings that control when each User can move cards or edit card data. That security information is stored here.</description>
    <label>Security</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>User Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Securities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>