force-app/main/default/objects/leankor__Security__c/fields/leankor__OwnerEditCard__c.field-meta.xml
<CustomField>
    <fullName>leankor__OwnerEditCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OwnerEditCard</label>
    <type>Checkbox</type>
</CustomField>