force-app/main/default/objects/leankor__Security__c/fields/leankor__OwnerMoveCard__c.field-meta.xml
<CustomField>
    <fullName>leankor__OwnerMoveCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OwnerMoveCard</label>
    <type>Checkbox</type>
</CustomField>