force-app/main/default/objects/leankor__Security__c/fields/leankor__UserRoleID__c.field-meta.xml
<CustomField>
    <fullName>leankor__UserRoleID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Role ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>