force-app/main/default/objects/leankor__Security__c/listViews/leankor__All.listView-meta.xml
<ListView>
    <fullName>leankor__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>leankor__GUID__c</columns>
    <columns>leankor__OwnerEditCard__c</columns>
    <columns>leankor__OwnerMoveCard__c</columns>
    <columns>leankor__UserRoleID__c</columns>
    <columns>leankor__ValueStream__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>